# gRPC-inference-engine

./: .gitignore  README.md  docker-compose.yml  inference_pb2.py  inference_pb2_grpc.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
dashboard/: app.py  index.html
docker/: prometheus.yml
docker/dashboards/: fraud_dashboard.json
feature_store/: __init__.py  rolling_engine.py  server.py  store.py
inference_engine/: client.py  server.py
models/: fraud_model.pkl
proto/: inference.proto
scripts/: benchmark.py  compile_proto.py  train_model.py
stream_ingestion/: __init__.py  simulator.py
tests/: test_feature_store.py  test_inference.py  test_rolling_engine.py
