[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc-inference-engine"
version = "0.1.0"
description = "Distributed Streaming Feature Store & Low-Latency Inference Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.24.0",
    "aiokafka>=0.10.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0"
]

[tool.setuptools]
packages = ["feature_store", "inference_engine", "stream_ingestion"]

[tool.black]
line-length = 100
target-version = ['py39']
extend-exclude = '''
/(
  | proto
  | inference_pb2.py
  | inference_pb2_grpc.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["proto/*", "inference_pb2.py", "inference_pb2_grpc.py"]
